fix some spacing issues between sections

--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ html {
 :root {
   --background-color: #091014;
   --gradient-color: #2e698b;
-  --complement-color: #246d98;
+  --complement-color: #586973;
   --text-color: #ffffff;
   --contrast-color: #1ba4d6;
   --card-color: rgba(65, 105, 128, 0.2);
@@ -44,7 +44,8 @@ section {
 
 .sectionTitle {
   color: var(--contrast-color);
-  margin: 30px 60px;
+  margin: 20px auto;
+  width: 90%;
   text-align: left;
   font-family: "pixelifySans";
   font-size: 32px;
