--- a/src/sections/Experience/ExperienceStyles.module.css
+++ b/src/sections/Experience/ExperienceStyles.module.css
@@ -7,7 +7,7 @@
 }
 
 .content {
-  width: 80%;
+  width: 90%;
   margin: 0 auto;
 }
 
