--- a/src/sections/Profile/ProfileStyles.module.css
+++ b/src/sections/Profile/ProfileStyles.module.css
@@ -32,7 +32,7 @@
 .avatar {
   border-radius: 50%;
   margin-bottom: 30px;
-  border: 2px solid var(--complement-color);
+  border: 2px solid var(--contrast-color);
   max-width: 100%;
   height: auto;
 }
@@ -79,7 +79,7 @@
 
 @media (max-width: 900px) {
   .container {
-    padding-top: 10%;
+    padding-top: 20%;
   }
 
   .content {
