--- a/src/sections/Skills/SkillsStyles.module.css
+++ b/src/sections/Skills/SkillsStyles.module.css
@@ -7,7 +7,7 @@
 }
 
 .content {
-  width: 80%;
+  width: 90%;
   text-align: center;
   margin: 0 auto;
 }
@@ -17,4 +17,5 @@
   font-family: "pixelifySans";
   font-size: 28px;
   color: var(--text-color);
+  margin: 20px 0px;
 }
